<resources>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>

    <string name="app_name">Travel_App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_header_desc">nav_header_desc</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">davidegri72@gmail.com</string>
    <string name="home">home</string>
    <string name="action_settings">Settings</string>
    <string name="about">about</string>
    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="contact_text">contact</string>
    <string name="trip_name">Trip name:</string>
    <string name="insert_trip_name">insert_trip_name</string>
    <string name="save_button">Save</string>
    <string name="delete_button">Delete</string>
    <string name="type_name_hint">type name...</string>
    <string name="type_destination_hint">type destination...</string>
    <string name="type_trip_name">Name</string>
    <string name="type_destination">Destination</string>
    <string name="insert_destination">type destination...</string>
    <string name="pick_date_textview">pick date...</string>
    <string name="pick_date_text">pick_date</string>
    <string name="city_break_rb">City Break</string>
    <string name="sea_side">Sea Side</string>
    <string name="mountains">Mountains</string>
    <string name="update_trip">Update</string>
    <string name="send_email_button">Send Email</string>
</resources>