<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/nav_header_padding_left"
    android:paddingTop="@dimen/nav_header_padding_top"
    android:paddingRight="@dimen/nav_header_padding_right"
    android:paddingBottom="@dimen/nav_header_padding_bottom"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/nav_header_desc"
        android:maxWidth="30dp"
        android:maxHeight="30dp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@mipmap/ic_launcher_round"

        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="42dp" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="116dp"
        android:layout_height="32dp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:layout_editor_absoluteX="195dp"
        tools:layout_editor_absoluteY="58dp" />

    <TextView
        android:id="@+id/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle"
        tools:layout_editor_absoluteX="197dp"
        tools:layout_editor_absoluteY="119dp" />


</androidx.appcompat.widget.LinearLayoutCompat>